--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,5 @@
 // app global css in SCSS form
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
+* {
+  font-family: 'Poppins', sans-serif;
+}
